<resources>
    <string name="app_name">Outsource</string>
    <string name="facebook_app_id">1052106148264805</string>
    <string name="fb_login_protocol_scheme">fb1052106148264805</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="notificacoes">Notificações</string>
    <string name="nome">Nome</string>
    <string name="descricao">Descrição</string>
    <string name="voltar">Voltar</string>
    <string name="confirmar">Confirmar</string>
    <string name="preco">Preço</string>
    <string name="deletar">Deletar</string>
    <string name="adicionar_moeda_header">Insira um valor para adicionar a sua carteira</string>
    <string name="cadastro_header">Cadastre-se no Outsource</string>
    <string name="primeiro_nome">Primeiro nome</string>
    <string name="ultimo_nome">Último nome</string>
    <string name="email">E-mail</string>
    <string name="celular">Celular</string>
    <string name="checkbox_termos_uso">Aceito os termos de uso e a política de privacidade</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="confirmar_codigo">Confirmar código</string>
    <string name="codigo_enviado_header">Digite o código enviado</string>
    <string name="excluir_minha_conta">Excluir minha conta</string>
    <string name="fazer_logout">Fazer logout</string>
    <string name="numero_do_telefone">Número do telefone</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="ou">ou</string>
    <string name="login">Login</string>
    <string name="codigo">Código</string>
    <string name="nome_do_servico">Nome do Serviço</string>
    <string name="estado">Estado</string>
    <string name="dinheiro_exemplo">R$ 410,00</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices rutrum blandit. Vestibulum scelerisque ornare purus, sed mollis metus tempor sed.</string>
    <string name="user_prestador_exemplo">Gabriel Morais</string>
    <string name="nota">Nota</string>
    <string name="nota_exemplo">5,0</string>
    <string name="foto_do_solicitante">Foto do solicitante</string>
    <string name="negociacoes">Negociações</string>
    <string name="negociar">Negociar</string>
    <string name="concluir_servico">Concluir Serviço</string>
    <string name="aceitar_oferta">Aceitar Oferta</string>
    <string name="user_usuario_exemplo">Gabriel Lourenço</string>
    <string name="avaliar_usuario">Avaliar usuário</string>
    <string name="cancelar_negociacao">Cancelar negociação</string>
    <string name="solicitar_novo_orcamento">Solicitar novo orçamento</string>
    <string name="fechar">Fechar</string>
    <string name="iniciar_chat">Iniciar chat</string>
    <string name="saldo_atual">Saldo atual</string>
    <string name="cifrao">R$</string>
    <string name="adicionar">Adicionar</string>
    <string name="formas_de_pagamento">Formas de pagamento</string>
    <string name="nenhum_cartao_cadastrado">Nenhum cartão cadastrado</string>
    <string name="numero_exemplo">0</string>
    <string name="servicos_concluidos">Serviços Concluídos</string>
    <string name="avaliacoes">Avaliações</string>
    <string name="meus_dados">Meus dados</string>
    <string name="botao_editar">Botão editar</string>
    <string name="meus">Meus</string>
    <string name="em_andamento">Em Andamento</string>
    <string name="concluidos">Concluídos</string>
    <string name="visualizar_servico">Visualizar serviço</string>
    <string name="aberta">Aberta</string>
    <string name="em_negociacao">Em negociação</string>
    <string name="executado_por">Executado por</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="spinner_estado_servico_header">Selecione o estado do serviço</string>
    <string name="nenhum_servico">Nenhum serviço</string>
    <string name="selecionar_local_allCaps">SELECIONAR LOCAL</string>
    <string name="question_servico_urgencia">É um serviço de urgência?</string>
    <string name="descricao_servico_urgencia">Um serviço de urgência é um serviço de maior necessidade de execução que expira em 24 horas após criado. Ele fica destacado a fim de ser visualizado mais facilmente</string>
    <string name="negociar_servico">Fechar negócio</string>
    <string-array name="tipos_servicos_andamento">
        <item>Em Execução</item>
        <item>Em Negociação</item>
    </string-array>
    <string name="editar_servico">Editar Serviço</string>
    <string name="opcao_oferta">Opções de Oferta</string>
    <string-array name="opcoes_oferta">
        <item>Aceitar esta oferta</item>
        <item>Ver perfil do prestador</item>
        <item>Enviar mensagem</item>
    </string-array>

    <!--Strings Database-->
    <string name="visualizacao">visualizacao</string>
    <string name="servico">servico</string>
    <string name="usuario">usuario</string>
    <string name="prestador">prestador</string>
    <string name="oferta">oferta</string>
    <string name="notificacao">notificacao</string>
    <string name="feedback">feedback</string>
    <string name="mensagem">mensagem</string>
    <string name="conversaUsuario">conversaUsuario</string>
    <string name="conversaPrestador">conversaPrestador</string>
    <string name="estadoServico">estadoServico</string>
    <string name="ordemRef">ordemRef</string>
    <string name="prestadorID">prestadorID</string>
    <string name="servicoID">servicoID</string>
    <string name="servicoNome">servicoNome</string>
    <string name="tempo">tempo</string>
    <string name="ultimaMensagem">ultimaMensagem</string>
    <string name="usuarioID">usuarioID</string>
    <string name="comentarios">Comentários</string>
    <string name="comentadorNome">comentadorNome</string>
    <string name="notaB">nota</string>
    <string name="autor">autor</string>
    <string name="nomeAutor">nomeAutor</string>
    <string name="texto">texto</string>
    <string name="valor">valor</string>
    <string name="estadoB">estado</string>
    <string name="nomeServico">nomeServico</string>
    <string name="textoNotificacao">textoNotificacao</string>
    <string name="tipoNotificacao">tipoNotificacao</string>
    <string name="ofertaValor">ofertaValor</string>
    <string name="prestadorId">prestadorId</string>
    <string name="prestadorNome">prestadorNome</string>
    <string name="carteira">carteira</string>
    <string name="emailB">email</string>
    <string name="id">id</string>
    <string name="pesoNota">pesoNota</string>
    <string name="sobreNome">sobreNome</string>
    <string name="telefone">telefone</string>
    <string name="concluido">concluido</string>
    <string name="data">data</string>
    <string name="dataf">dataf</string>
    <string name="descricaoB">descricao</string>
    <string name="idCriador">idCriador</string>
    <string name="idPrestador">idPrestador</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="nomeB">nome</string>
    <string name="precoB">preco</string>
    <string name="urgente">urgente</string>
    <string name="aberto">aberto</string>
    <string name="andamento">andamento</string>
    <string name="nenhuma_notificacao">Você não possui nenhuma notificação. Calma, quando tiver uma, ela será mostrada aqui</string>
    <string name="nenhuma_conversa_iniciada">Nenhuma conversa iniciada</string>
</resources>
