<?xml version="1.0" encoding="utf-8"?>
<!--Em desuso, senhores?-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/etAtualizaNomeServicoID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etAtualizaDescricaoServicoID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descricao"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etAtualizaPrecoServicoID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/preco"
        android:inputType="textPersonName" />

    <ListView
        android:id="@+id/lServicos"
        android:layout_width="match_parent"
        android:layout_height="372dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btDeletarID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deletar" />

        <Button
            android:id="@+id/btConfirmarID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirmar" />
    </LinearLayout>
</LinearLayout>
