<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.outsource.inovaufrpe.usuario.solicitante.gui.CadastroActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/cardview_light_background">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/cadastro_header"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/etNomeID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/primeiro_nome"
                android:inputType="textPersonName"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/etSobrenomeID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ultimo_nome"
                android:inputType="textPersonName"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/etEmailID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/etTelefoneID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/celular"
                android:inputType="phone"
                android:textColor="@color/colorBlack" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/checkbox_termos_uso" />

            <Button
                android:id="@+id/btCadastrarID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/colorAccent"
                android:text="@string/cadastrar" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>
