<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.AppCompat.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purple_background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.outsource.inovaufrpe.usuario.solicitante.gui.LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/out" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="16dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp"
        tools:targetApi="o">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/etTelefoneID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero_do_telefone"
                android:inputType="phone"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/etCodigoID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/codigo"
                android:inputType="number" />

            <Button
                android:id="@+id/btLogarID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/login" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/ou"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/com_facebook_button_background_color_disabled" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btFacebookID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
