<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ly"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.outsource.inovaufrpe.usuario.servico.gui.VisualizarServicoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvNomeServico"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/nome_do_servico"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPrecoServico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="end"
            android:text="@string/dinheiro_exemplo"
            android:textAlignment="textEnd"
            android:textSize="28sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tvEstadoServicoID"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvNomeServico"
            android:text="@string/estado"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGray"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/descricao"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescricaoServico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum" />

    </LinearLayout>

    <!--Layout p/ exibir Quem Solicita ou Executado por-->
    <LinearLayout
        android:id="@+id/layoutPessoa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTituloLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text=""
            android:textAllCaps="true"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvNomePessoa"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/user_prestador_exemplo"
                android:textSize="20sp" />

            <ImageView
                android:contentDescription="@string/nota"
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvNomePessoa"
                app:srcCompat="@drawable/ic_star_black_24dp" />

            <TextView
                android:id="@+id/tvNotaPessoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:text="@string/nota_exemplo"
                android:textSize="16sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivFotoSolicitante"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/default_profile"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

        </RelativeLayout>
    </LinearLayout>
    <!--Fim Layout Solicitante-->

    <!-- Layout Prestador -->
    <LinearLayout
        android:id="@+id/layoutNegociacoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/negociacoes"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <!--<include-->
            <!--layout="@layout/card_perfil_negociacao"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
        <Button
            android:id="@+id/btConversasID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Negociações"></Button>

    </LinearLayout>
    <!-- Fim Layout Prestador -->


    <RelativeLayout
        android:id="@+id/layoutBotoesBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutBtnNegociar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/screenEnd"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/btnNegociar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:text="@string/negociar"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBtnConcluir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/screenEnd"
            android:background="@color/colorGreen">

            <Button
                android:id="@+id/btnConcluirServico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:text="@string/concluir_servico"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBtnAceitarOferta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layoutBtnNegociar"
            android:background="@color/colorGreen"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btAceitarNegociacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:text="@string/aceitar_oferta"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

        <View
            android:id="@+id/screenEnd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

</LinearLayout>
