<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.outsource.inovaufrpe.usuario.carteira.gui.AdicionarMoedaActivity">


    <EditText
        android:id="@+id/etAdicionarMoedaID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btConfirmarID"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/preco" />

    <Button
        android:id="@+id/btConfirmarID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="221dp"
        android:text="@string/confirmar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etAdicionarMoedaID"
        android:layout_centerHorizontal="true"
        android:text="@string/adicionar_moeda_header" />
</RelativeLayout>
