<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/avaliar_usuario"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RatingBar
            android:id="@+id/rbAvaliarServico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:numStars="5"
            android:stepSize="1.0"
            android:secondaryProgressTint="#00000000"
            android:scaleX="1.0"
            android:scaleY="1.0"
            android:theme="@style/RatingBarGold" />

    </RelativeLayout>

    <EditText
        android:id="@+id/etMensagens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="28dp"
        android:hint="@string/comentarios"
        android:inputType="textMultiLine|textCapSentences" />

    <Button
        android:id="@+id/btnAvaliarConcluir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorGreen"
        android:text="@string/concluir_servico"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>